--- a/onlinetouch/src/main/webapp/template/public/content.html
+++ b/onlinetouch/src/main/webapp/template/public/content.html
@@ -13,7 +13,7 @@
 				class="col-md-3 new-grid simpleCart_shelfItem wow flipInY animated"
 				data-wow-delay=".5s">
 				<div class="new-top">
-					<a href="single.html"><img src="../static/images/public/g9.jpg"
+					<a href="single.html"><img src="http://lorempixel.com/219/291/food/?id=1"
 						class="img-responsive" alt="" /></a>
 					<div class="new-text">
 						<ul>
@@ -45,7 +45,7 @@
 				class="col-md-3 new-grid new-mdl simpleCart_shelfItem wow flipInY animated"
 				data-wow-delay=".7s">
 				<div class="new-top">
-					<a href="single.html"><img src="../static/images/public/g10.jpg"
+					<a href="single.html"><img src="http://lorempixel.com/219/291/food/?id=2"
 						class="img-responsive" alt="" /></a>
 					<div class="new-text">
 						<ul>
