angular services and angular valid

--- a/onlinetouch/src/main/webapp/template/public/header.html
+++ b/onlinetouch/src/main/webapp/template/public/header.html
@@ -1,13 +1,13 @@
 <!--header-->
-<div class="header">
+<div class="header" ng-controller = "IndexController">
 	<div class="top-header navbar navbar-default">
 		<!--header-one-->
 		<div class="container">
 			<div class="nav navbar-nav wow fadeInLeft animated"
 				data-wow-delay=".5s">
 				<p>
-					Welcome to Online Touch <a href="register.html">Register </a> Or <a
-						href="signin.html">Sign In </a>
+					Welcome to Online Touch <a ui-sref="register">Register </a> Or <a
+						ui-sref="login">Sign In </a>
 				</p>
 			</div>
 			<div
