security and angular bind

--- a/onlinetouch/src/main/webapp/template/public/header.html
+++ b/onlinetouch/src/main/webapp/template/public/header.html
@@ -9,6 +9,9 @@
 					Welcome to Online Touch <a ui-sref="register">Register </a> Or <a
 						ui-sref="login">Sign In </a>
 				</p>
+				<p ng-show = "authenticated">
+					<a ng-click="logout()">logout</a>
+				</p>
 			</div>
 			<div
 				class="nav navbar-nav navbar-right social-icons wow fadeInRight animated"
