--- a/onlinetouch/src/main/webapp/template/public/login.html
+++ b/onlinetouch/src/main/webapp/template/public/login.html
@@ -33,7 +33,7 @@
 					class="help-block">
 					User name is required.
 				</span>
-				<input
+				<input type = "password"
 					class="form-control" id="password"
 					name="password" placeholder="Enter password"
 					ng-model="credentials.password" required>
