spring security entrypoint added

--- a/onlinetouch/src/main/webapp/template/public/login.html
+++ b/onlinetouch/src/main/webapp/template/public/login.html
@@ -14,7 +14,7 @@
 			style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInUp;">
 			<h4>
 				Welcome back to Online Touch ! <br> Not a Member? <a
-					ui-sref="register"> Register Now »</a>
+					ui-sref="register"> Register Now ï¿½</a>
 			</h4>
 		</div>
 		<div class="login-body wow fadeInUp animated animated"
